@@ -73,10 +73,11 @@ public class TabletComputeNodeMapperTest {
         Long arbitraryTablet = 9000L;
         TabletComputeNodeMapper mapper = new TabletComputeNodeMapper();
         Assert.assertEquals(0, mapper.numResourceIsolationGroups());
-        Assert.assertEquals(Collections.emptyList(), mapper.computeNodesForTablet(arbitraryTablet, 1, ""));
+        Assert.assertEquals(Collections.emptyList(), mapper.computeNodesForTablet(arbitraryTablet, 1, "", 0));
         mapper.modifyComputeNode(1L, "", "");
         Assert.assertEquals(1, mapper.numResourceIsolationGroups());
-        Assert.assertEquals(List.of(1L), mapper.computeNodesForTablet(arbitraryTablet, 1, ""));
+        Assert.assertEquals(List.of(1L), mapper.computeNodesForTablet(arbitraryTablet, 1, "", 0));
+        Assert.assertEquals(Collections.emptyList(), mapper.computeNodesForTablet(arbitraryTablet, 1, "", 1));
     }
 
     @Test
@@ -113,6 +114,8 @@ public class TabletComputeNodeMapperTest {
         mapper.addComputeNode(3L, ResourceIsolationGroupUtils.DEFAULT_RESOURCE_ISOLATION_GROUP_ID);
         mapper.addComputeNode(4L, ResourceIsolationGroupUtils.DEFAULT_RESOURCE_ISOLATION_GROUP_ID);
         Assert.assertEquals(3, mapper.computeNodesForTablet(arbitraryTablet, 3).size());
+        Assert.assertEquals(2, mapper.computeNodesForTablet(arbitraryTablet, 2,
+                ResourceIsolationGroupUtils.DEFAULT_RESOURCE_ISOLATION_GROUP_ID, 1).size());
         Assert.assertFalse(mapper.trackingNonDefaultResourceIsolationGroup());
 
         String otherGroup = "someothergroup";
@@ -150,14 +153,14 @@ public class TabletComputeNodeMapperTest {
 
 
         // Ask for tablet 1 twice, track which cn is returned.
-        Long cnWhichOwnsT1 = mapper.computeNodesForTablet(1L, 1, thisRig).get(0);
+        Long cnWhichOwnsT1 = mapper.computeNodesForTablet(1L, 1, thisRig, 0).get(0);
         cnToReturnCount[cnWhichOwnsT1.intValue()]++;
-        cnToReturnCount[mapper.computeNodesForTablet(1L, 1, thisRig).get(0).intValue()]++;
+        cnToReturnCount[mapper.computeNodesForTablet(1L, 1, thisRig, 0).get(0).intValue()]++;
         // Ask for a CN for tablet 2 thrice
-        Long cnWhichOwnsT2 = mapper.computeNodesForTablet(2L, 1, thisRig).get(0);
+        Long cnWhichOwnsT2 = mapper.computeNodesForTablet(2L, 1, thisRig, 0).get(0);
         cnToReturnCount[cnWhichOwnsT2.intValue()]++;
-        cnToReturnCount[mapper.computeNodesForTablet(2L, 1, thisRig).get(0).intValue()]++;
-        cnToReturnCount[mapper.computeNodesForTablet(2L, 1, thisRig).get(0).intValue()]++;
+        cnToReturnCount[mapper.computeNodesForTablet(2L, 1, thisRig, 0).get(0).intValue()]++;
+        cnToReturnCount[mapper.computeNodesForTablet(2L, 1, thisRig, 0).get(0).intValue()]++;
 
         Assert.assertEquals(2L, mapper.getTabletMappingCount().get(1L).get());
         Assert.assertEquals(3L, mapper.getTabletMappingCount().get(2L).get());
